vhost-ingress.yaml
# Example 34
# Name based virtual hosting
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vhost-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test1
          servicePort: 80
      - path: /test
        backend:
          serviceName: nginx-test2
          servicePort: 80
  - host: test3.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test3
          servicePort: 80
  - host: testwebsite.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-test4
          servicePort: 80
